# pfeg

./: .gitignore  pfeg.org
doc/: man.md
doc/paper/: paper.tex
doc/pres/: pres.tex
etc/: example.ini
src/: PFEG.hs  PFEGtools.cabal  analyze.R  analyze_predict.R  german.ini  my.sql  pfeg.sql  todo.org
src/PFEG/: BinaryMagic.hs  Common.hs  Configuration.hs  Context.hs  ConversionTable.hs  Pattern.hs  SQL.hs  ShortestMatch.hs  Types.hs
src/tools/: indexUnigrams.hs  matchContexts.hs  matcher.hs  pfeg.hs  recordContexts.hs  unigramTable.hs  wac2tt.hs
tools/: PFEGtools.cabal  ttCountTag.hs  tuba2tt.hs  wac2tt.hs
