Name:          PFEGtools
Version:       0.0.5
Cabal-Version: >= 1.2
License:       BSD3
Author:        Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Synopsis:      Tools for predicting functional elements in German.
Category:      NLP
Build-type:    Simple

Executable pfeg
    Build-Depends: HDBC, base, text, mtl, ReadArgs,
                   hsini, iteratee, split, hashable, containers, SHA2, bytestring,
                   time, text, attoparsec, binary, convertible,
                   attoparsec-iteratee, transformers, safe, unordered-containers,
                   MonadCatchIO-transformers
                   , vty >= 4.7.0.10
                   , MissingH >= 1.1.1.0
                   , HDBC-mysql
                   , parsec >= 3.1.2
                   , sphinx
    ghc-options:   -O2 -Wall -threaded -rtsopts -funbox-strict-fields
    Main-is:       tools/pfeg.hs

Library
    ghc-options: -O2 -Wall
    exposed-modules: Paths_PFEGtools

source-repository head
    type: git
    location: git://github.com/adimit/pfeg
