Name:          PFEGtools
Version:       0.0.6
Cabal-Version: >= 1.2
License:       BSD3
Author:        Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Synopsis:      Tools for predicting functional elements in German.
Category:      NLP
Build-type:    Simple

Executable pfeg
    Build-Depends:   HDBC
                   , HUnit
                   , base
                   , text
                   , stm == 2.3.*
                   , stm-chans == 1.3.*
                   , mtl
                   , text-icu
                   , ReadArgs
                   , hsini == 0.1.999.1
                   , iteratee
                   , split
                   , array
                   , hashable
                   , containers
                   , SHA2
                   , bytestring
                   , time
                   , groom
                   , attoparsec
                   , binary
                   , convertible
                   , old-locale == 1.0.*
                   , attoparsec-iteratee
                   , transformers < 0.3
                   , safe
                   , unordered-containers
                   , MonadCatchIO-transformers
                   , vty >= 4.7.0.10
                   , MissingH >= 1.1.1.0
                   , HDBC-mysql
                   , parsec >= 3.1.2
                   , sphinx == 0.5.3.2
    ghc-options:   -O2 -Wall -threaded -rtsopts -funbox-strict-fields
    Main-is:       tools/pfeg.hs

Library
    ghc-options: -O2 -Wall
    exposed-modules: Paths_PFEGtools

source-repository head
    type: git
    location: git://github.com/adimit/pfeg
