Name:          PFEGtools
Version:       0.0.6
Cabal-Version: >= 1.2
License:       BSD3
Author:        Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Synopsis:      Tools for predicting functional elements in German.
Category:      NLP
Build-type:    Simple

Library
    ghc-options: -O2 -Wall -threaded -rtsopts -funbox-strict-fields
    exposed-modules: PFEG.Types
                   , PFEG.Common
                   , PFEG.Configuration
                   , PFEG.Context
                   , PFEG.SQL
                   , PFEG.ShortestMatch
                   , PFEG.Pattern
                   , PFEG
                   , Paths_PFEGtools
    Build-Depends: base
                 , array == 0.4.*
                 , split == 0.2.*
                 , bytestring == 0.9.*
                 , time == 1.4.*
                 , MonadCatchIO-transformers == 0.3.*
                 , text == 0.11.*
                 , mtl  == 2.0.*
                 , attoparsec == 0.10.*
                 , attoparsec-iteratee == 0.4.*
                 , iteratee == 0.8.*
                 , MissingH == 1.1.*
                 , sphinx == 0.6.1
                 , hsini == 0.1.999.1
                 , HDBC == 2.3.*
                 -- , HDBC-mysql == 0.6.*
                 , parsec == 3.1.*

Executable pfeg
    Build-Depends: base
                 , parsec >= 3.1.2
                 , sphinx == 0.6.*
                 , either == 3.0.*
                 , hashable == 1.1.*
                 , unordered-containers == 0.2.*
                 , text == 0.11.*
                 , text-icu == 0.6.*
                 , iteratee == 0.8.*
                 , parallel == 3.2.*
                 , mtl == 2.0.*
                 , vty == 4.7.*
                 , stm == 2.3.*
                 , stm-chans == 1.3.*
                 , HDBC == 2.3.*
                 , HDBC-mysql == 0.6.*
                 , groom == 0.1.*
                 , ReadArgs == 1.1.*
                 , old-locale == 1.0.*

    ghc-options:   -O2 -Wall -threaded -rtsopts -funbox-strict-fields
    Main-is:       tools/pfeg.hs

source-repository head
    type: git
    location: git://github.com/adimit/pfeg
